fix: update header label to Azerbaijani and enhance data mapping in Table_PageContent style: increase z-index for dropdown options to improve visibility

--- a/src/shared/catalog/shared/select/select.module.css
+++ b/src/shared/catalog/shared/select/select.module.css
@@ -166,7 +166,7 @@
     min-height: 100px;
     max-height: 272px;
     overflow: hidden;
-    z-index: 45;
+    z-index: 200;
 }
 
 .searchHeader {
